--- a/problems/472.concatenated-words.md
+++ b/problems/472.concatenated-words.md
@@ -129,15 +129,16 @@ class Trie:
 
 class Solution:
     def findAllConcatenatedWordsInADict(self, words: List[str]) -> List[str]:
-        self.trie = Trie()
+        trie = Trie()
         res = []
-
+        words.sort(key=len)
         for word in words:
-            self.trie.insert(word)
-        for word in words:
-            if self.trie.cntWords(word) >= 2:
+            if trie.cntWords(word) >= 2:
                 res.append(word)
+            else:
+                trie.insert(word)
         return res
+
 ```
 
 ## 相关题目
