--- a/problems/1015.smallest-integer-divisible-by-k.md
+++ b/problems/1015.smallest-integer-divisible-by-k.md
@@ -46,9 +46,9 @@ https://leetcode-cn.com/problems/smallest-integer-divisible-by-k/
 
 这道题是说给定一个 K 值，能否找到一个形如 1，11，111，1111 。。。 的数字 n，使得 n % K == 0，并要求 n 尽可能地小。
 
-由于题目要找一个尽可能小的 n ，那么我们可以从小到大进行枚举，知道找到这样的一个 n 值即可。即从 1，11，111，1111 。。。 这样一直除下去，直到碰到可以整除的，我们返回即可。
+由于题目要找一个尽可能小的 n ，那么我们可以从小到大进行枚举，直到找到这样的一个 n 值即可。即从 1，11，111，1111 。。。 这样一直除下去，直到碰到可以整除的，我们返回即可。
 
-但是如果这个数字根本就无法整除怎么办？没错，我们会无限循环下去。我们应该在什么时刻跳出循环返回 - 1 （表示不能整除）呢？
+但是如果这个数字根本就无法整除怎么办？没错，我们会无限循环下去。那么我们应该在什么时刻跳出循环返回 - 1 （表示不能整除）呢？
 
 比如 k = 2 来说我们的算法过程如下：
 
@@ -78,15 +78,7 @@ https://leetcode-cn.com/problems/smallest-integer-divisible-by-k/
 
 ## 代码
 
-```python
-#
-# @lc app=leetcode.cn id=1015 lang=python3
-#
-# [1015] 可被 K 整除的最小整数
-#
-
-# @lc code=start
-
+```py
 
 class Solution:
     def smallestRepunitDivByK(self, K: int) -> int:
