--- a/problems/455.AssignCookies.md
+++ b/problems/455.AssignCookies.md
@@ -61,8 +61,9 @@ https://leetcode-cn.com/problems/assign-cookies/
 
 ## 代码
 
-语言支持：JS
+语言支持：JS, Python
 
+JS Code:
 ```js
 /**
  * @param {number[]} g
@@ -88,6 +89,22 @@ const findContentChildren = function (g, s) {
     }
     return res;
 };
+```
+
+Python Code:
+```python
+from typing import *
+class Solution:
+    def findContentChildren(self, g: List[int], s: List[int]) -> int:
+        g.sort(reverse=True)
+        s.sort(reverse=True)
+        count=gIdx=sIdx=0
+        while gIdx<len(g) and sIdx<len(s):
+            if s[sIdx]>=g[gIdx]:
+                sIdx+=1
+                count+=1
+            gIdx+=1
+        return count
 ```
 
 ***复杂度分析***
