--- a/problems/437.path-sum-iii.md
+++ b/problems/437.path-sum-iii.md
@@ -117,8 +117,8 @@ var pathSum = function (root, sum) {
 
 ## 代码
 
-- 语言支持：JS
-
+- 语言支持：JS,Python
+JS code:
 ```js
 /*
  * @lc app=leetcode id=437 lang=javascript
@@ -162,6 +162,39 @@ var pathSum = function (root, sum) {
   const hashmap = {};
   return helper(root, 0, sum, hashmap);
 };
+```
+Python Code:
+```
+import collections
+from typing import *
+class TreeNode:
+    def __init__(self, val=0, left=None, right=None):
+        self.val = val
+        self.left = left
+        self.right = right
+        
+visited=collections.defaultdict(lambda:0) # only used for pathSum2
+acc=0
+
+class Solution:
+    def pathSum(self, root: Optional[TreeNode], targetSum: int) -> int:
+        if not root:
+            return 0
+        global acc
+        count=0
+        acc+=root.val
+        if acc==targetSum:
+            count+=1
+        if acc-targetSum in visited:
+            count+=visited[acc-targetSum]
+        visited[acc]+=1
+        if root.left:
+            count+=self.pathSum(root.left,targetSum)
+        if root.right:
+            count+=self.pathSum(root.right,targetSum)
+        visited[acc]-=1
+        acc-=root.val
+        return count
 ```
 
 **复杂度分析**
