--- a/problems/455.AssignCookies.md
+++ b/problems/455.AssignCookies.md
@@ -96,14 +96,14 @@ Python Code:
 from typing import *
 class Solution:
     def findContentChildren(self, g: List[int], s: List[int]) -> int:
-        g.sort(reverse=True)
-        s.sort(reverse=True)
+        g.sort()
+        s.sort()
         count=gIdx=sIdx=0
         while gIdx<len(g) and sIdx<len(s):
             if s[sIdx]>=g[gIdx]:
-                sIdx+=1
+                gIdx+=1
                 count+=1
-            gIdx+=1
+            sIdx+=1
         return count
 ```
 
