--- a/problems/437.path-sum-iii.md
+++ b/problems/437.path-sum-iii.md
@@ -165,7 +165,7 @@ var pathSum = function (root, sum) {
 };
 ```
 Python Code:
-```
+```python
 import collections
 from typing import *
 class TreeNode:
