--- a/problems/437.path-sum-iii.md
+++ b/problems/437.path-sum-iii.md
@@ -168,35 +168,35 @@ var pathSum = function (root, sum) {
 Python Code:
 ```python
 import collections
-from typing import *
+'''
 class TreeNode:
     def __init__(self, val=0, left=None, right=None):
         self.val = val
         self.left = left
         self.right = right
-        
-visited=collections.defaultdict(lambda:0) # only used for pathSum2
-acc=0
-
+'''
 class Solution:
-    def pathSum(self, root: Optional[TreeNode], targetSum: int) -> int:
+    def helper(self,root,acc,target,hashmap):
         if not root:
             return 0
-        global acc
         count=0
         acc+=root.val
-        if acc==targetSum:
+        if acc==target:
             count+=1
-        if acc-targetSum in visited:
-            count+=visited[acc-targetSum]
-        visited[acc]+=1
+        if acc-target in hashmap:
+            count+=hashmap[acc-target]
+        hashmap[acc]+=1
         if root.left:
-            count+=self.pathSum(root.left,targetSum)
+            count+=self.helper(root.left,acc,target,hashmap)
         if root.right:
-            count+=self.pathSum(root.right,targetSum)
-        visited[acc]-=1
-        acc-=root.val
+            count+=self.helper(root.right,acc,target,hashmap)
+        hashmap[acc]-=1
         return count
+    
+    def pathSum(self, root: Optional[TreeNode], targetSum: int) -> int:
+        hashmap=collections.defaultdict(lambda:0)
+        acc=0
+        return self.helper(root,acc,targetSum,hashmap)
 ```
 
 **复杂度分析**
