--- a/problems/437.path-sum-iii.md
+++ b/problems/437.path-sum-iii.md
@@ -195,8 +195,7 @@ class Solution:
     
     def pathSum(self, root: Optional[TreeNode], targetSum: int) -> int:
         hashmap=collections.defaultdict(lambda:0)
-        acc=0
-        return self.helper(root,acc,targetSum,hashmap)
+        return self.helper(root,0,targetSum,hashmap)
 ```
 
 **复杂度分析**
