--- a/problems/504.base-7.md
+++ b/problems/504.base-7.md
@@ -85,7 +85,7 @@ class Solution:
 class Solution:
     def convertToBase7(self, num: int) -> str:
         if num == 0:
-            return 0
+            return "0"
         ans = []
         is_negative = num < 0
         num = abs(num)
