fixed  a wrong word

--- a/problems/1203.sort-items-by-groups-respecting-dependencies.md
+++ b/problems/1203.sort-items-by-groups-respecting-dependencies.md
@@ -129,7 +129,7 @@ class Solution:
 - 圆圈表示的是项目
 - 黑色线条表示项目的依赖关系
 - 红色线条表示项目和组之间的依赖关系
-- 绿色线条是项目之间的依赖关系
+- 绿色线条是组之间的依赖关系
 
 注意绿色线条不是题目给出的，而是需要我们自己生成。
 
