fix: problems/220.contains-duplicate-iii.md

--- a/problems/220.contains-duplicate-iii.md
+++ b/problems/220.contains-duplicate-iii.md
@@ -169,7 +169,9 @@ public:
             buck[nth] = nums[i];
             if(i >= k)
             {
-                buck.erase(nums[i - k] / mod);
+                long long pos = nums[i - k] / mod;
+                if(nums[i - k] < 0) pos--;
+                buck.erase(pos);
             }
         }
         return false;
