--- a/problems/416.partition-equal-subset-sum.md
+++ b/problems/416.partition-equal-subset-sum.md
@@ -294,6 +294,8 @@ var change = function (amount, coins) {
 };
 ```
 
+**注意这里内层循环和外层循环不能颠倒，即必须外层是遍历 coins，内层遍历 amount，否则 coins 就可能被使用多次而导致和题意不符**
+
 **复杂度分析**
 
 - 时间复杂度：$O(amount * len(coins))$
