Update and rename 547.friend-circles.md to 547.number-of-provinces.md
原题目的内容和地址已经发生了改变，这里同步一下leetcode的题目更改

--- a/problems/547.number-of-provinces.md
+++ b/problems/547.number-of-provinces.md
@@ -1,14 +1,16 @@
-## 题目地址（547. 朋友圈）
+## 题目地址（547. 省份数量）
 
-https://leetcode-cn.com/problems/friend-circles/
+https://leetcode-cn.com/problems/number-of-provinces/
 
 ## 题目描述
 
 ```
 
-班上有  N  名学生。其中有些人是朋友，有些则不是。他们的友谊具有是传递性。如果已知 A 是 B  的朋友，B 是 C  的朋友，那么我们可以认为 A 也是 C  的朋友。所谓的朋友圈，是指所有朋友的集合。
+有 N 个城市，其中一些彼此相连，另一些没有相连。如果城市 A 与城市 B 直接相连，且城市 B 与城市 C 直接相连，那么城市 A 与城市 C 间接相连。
 
-给定一个  N \* N  的矩阵  M，表示班级中学生之间的朋友关系。如果 M[i][j] = 1，表示已知第 i 个和 j 个学生互为朋友关系，否则为不知道。你必须输出所有学生中的已知的朋友圈总数。
+省份是一组直接或间接相连的城市，组内不含其他没有相连的城市。
+
+给你一个 N x N 的矩阵 isConnected ，其中 isConnected[i][j] = 1 表示第 i 个城市和第 j 个城市直接相连，而 isConnected[i][j] = 0 表示二者不直接相连。返回矩阵中省份的数量。
 
 示例 1:
 
@@ -17,8 +19,8 @@ https://leetcode-cn.com/problems/friend-circles/
 [1,1,0],
 [0,0,1]]
 输出: 2
-说明：已知学生 0 和学生 1 互为朋友，他们在一个朋友圈。
-第 2 个学生自己在一个朋友圈。所以返回 2。
+说明：已知城市 0 和城市 1 相连，他们在一个省份。
+第 2 个城市自己在一个省份。所以返回 2。
 示例 2:
 
 输入:
@@ -26,11 +28,11 @@ https://leetcode-cn.com/problems/friend-circles/
 [1,1,1],
 [0,1,1]]
 输出: 1
-说明：已知学生 0 和学生 1 互为朋友，学生 1 和学生 2 互为朋友，所以学生 0 和学生 2 也是朋友，所以他们三个在一个朋友圈，返回 1。
+说明：已知城市 0 和城市 1 直接相连，城市 1 和城市 2 直接相连，所以城市 0 和城市 2 间接相连，所以他们三个在一个省份，返回 1。
 注意：
 
 N 在[1,200]的范围内。
-对于所有学生，有 M[i][i] = 1。
+对于所有城市，有 M[i][i] = 1。
 如果有 M[i][j] = 1，则有 M[j][i] = 1。
 
 ```
@@ -48,7 +50,7 @@ N 在[1,200]的范围内。
 
 ## 思路
 
-并查集有一个功能是可以轻松计算出连通分量，然而本题的朋友圈的个数，本质上就是连通分量的个数，因此用并查集可以完美解决。
+并查集有一个功能是可以轻松计算出连通分量，然而本题的省份的个数，本质上就是连通分量的个数，因此用并查集可以完美解决。
 
 为了简单更加清晰，我将并查集模板代码单尽量独拿出来。
 
