--- a/problems/172.factorial-trailing-zeroes.md
+++ b/problems/172.factorial-trailing-zeroes.md
@@ -34,10 +34,12 @@ https://leetcode-cn.com/problems/factorial-trailing-zeroes/
 
 ## 思路
 
-我们需要求解这 n 个数字相乘的结果末尾有多少个 0，由于题目要求 log 的复杂度，因此暴力求解是不行的。
+我们需要求解这 n 个数字相乘的结果末尾有多少个 0，由于题目要求 log 的复杂度，因此
+暴力求解是不行的。
 
-通过观察，我们发现如果想要结果末尾是 0，必须是分解质因数之后，2 和 5 相乘才行，同时因数分解之后发现 5 的个数远小于 2，
-因此我们只需要求解这 n 数字分解质因数之后一共有多少个 5 即可.
+通过观察，我们发现如果想要结果末尾是 0，必须是分解质因数之后，2 和 5 相乘才行，
+同时因数分解之后发现 5 的个数远小于 2，因此我们只需要求解这 n 数字分解质因数之后
+一共有多少个 5 即可.
 
 ![172.factorial-trailing-zeroes-2](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlubdkzp7j30i10970t2.jpg)
 
@@ -45,12 +47,19 @@ https://leetcode-cn.com/problems/factorial-trailing-zeroes/
 
 ![172.factorial-trailing-zeroes-1](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlubf2c3fj30hr0b4aar.jpg)
 
-我们的结果并不是直接 f(n) = n / 5, 比如 n 为 30， 25 中是有两个 5 的。
-类似，n 为 150，会有 7 个这样的数字，通过观察我们发现规律`f(n) = n/5 + n/5^2 + n/5^3 + n/5^4 + n/5^5+..`
+我们的结果并不是直接 f(n) = n / 5, 比如 n 为 30， 25 中是有两个 5 的。类似，n 为
+150，会有 7 个这样的数字。
+
+其中 f(n) = n / 5 其实仅表示分解出的质因数仅包含一个 5 的个数。而我们的答案是质
+因数中所有的 5 。因此等价于 f(n) = n / 5 + n / 25 + n / 125 + ... + n / 5^k
+
+> 5 ^ k 表示 质因数中有 k 个 5 的个数
+
+据此得出转移方程：`f(n) = n/5 + n/5^2 + n/5^3 + n/5^4 + n/5^5+..`
 
 ![172.factorial-trailing-zeroes-3](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlubgxccqj30h3091t9i.jpg)
 
-如果可以发现上面的规律，用递归还是循环实现这个算式就看你的了。
+如果可以发现上面的方程，用递归还是循环实现这个算式就看你的了。
 
 ## 关键点解析
 
@@ -145,8 +154,10 @@ class Solution {
 - 时间复杂度：$O(logN)$
 - 空间复杂度：$O(1)$
 
-更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
+更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode
+。 目前已经 37K star 啦。
 
-关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你
+识别套路，高效刷题。
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
