--- a/problems/1168.optimize-water-distribution-in-a-village-en.md
+++ b/problems/1168.optimize-water-distribution-in-a-village-en.md
@@ -66,7 +66,7 @@ As below pic:
 From pictures, we can see that all nodes already connected with minimum costs.
 
 #### Complexity Analysis
-- *Time Complexity:* `O(ElogE) - E number of edge in graph`
+- *Time Complexity:* `O(ElogE + ElogV) - E number of edge in graph, to do the operation in the union and find for each edge in the list
 - *Space Complexity:* `O(E)`
 
 
