--- a/problems/715.range-module.md
+++ b/problems/715.range-module.md
@@ -73,7 +73,7 @@ class RangeModule(object):
         self.ranges[i:j+1] = [(left, right)]
     def queryRange(self, left, right):
         i = bisect.bisect_right(self.ranges, (left, float('inf'))) - 1
-        return self.ranges and self.ranges[i][0] <= left and right <= self.ranges[i][1]
+        return bool(self.ranges and self.ranges[i][0] <= left and right <= self.ranges[i][1])
 
     def removeRange(self, left, right):
         i, j = self.overlap(left, right)
