--- a/problems/380.insert-delete-getrandom-o1.md
+++ b/problems/380.insert-delete-getrandom-o1.md
@@ -61,7 +61,7 @@ randomSet.getRandom();
 对于插入：
 
 - 我们直接往 append，并将其插入哈希表即可。
-- 对于删除，我们需要做到 O(1)。删除哈希表很明显可以，但是对于数组，平均时间复杂度为 O(1)。
+- 对于删除，我们需要做到 $O(1)$。 删除哈希表可以做到 $O(1)$。但是对于数组的删除，平均时间复杂度为 $O(n)$。
 
 因此如何应付删除的这种性能开销呢？ 我们知道对于数据删除，我们的时间复杂度来源于
 
