Added a useful link
Have added a useful link about the sorting algorithm from the scaler topics.

--- a/problems/912.sort-an-array.md
+++ b/problems/912.sort-an-array.md
@@ -43,7 +43,7 @@ https://leetcode-cn.com/problems/sort-an-array/
 并且这道题目的难度是`Medium`， 笔者感觉有点不可思议。
 
 我们先来看题目的限制条件，这其实在选择算法的过程中是重要的。 看到这道题的时候，大脑就闪现出了各种排序算法，
-这也算是一个复习`排序算法`的机会吧。
+这也算是一个复习[`排序算法`](https://www.scaler.com/topics/data-structures/sorting-algorithms/)的机会吧。
 
 题目的限制条件是有两个，第一是元素个数不超过 10k，这个不算大。 另外一个是数组中的每一项范围都是`-50k`到`50k`（包含左右区间）。
 看到这里，基本我就排除了时间复杂度为 O(n^2)的算法。
