--- a/problems/1.two-sum.md
+++ b/problems/1.two-sum.md
@@ -65,7 +65,7 @@ for(int i = 0; i < n; i++) {
 
 ## 代码
 
-- 语言支持：JS, Go，CPP
+- 语言支持：JS, Go,CPP,Java,Python
 
 ```js
 /**
@@ -117,6 +117,36 @@ public:
         return {};
     }
 };
+```
+
+Java Code:
+
+```java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        Map<Integer, Integer> hashtable = new HashMap<Integer, Integer>();
+        for (int i = 0; i < nums.length; ++i) {
+            if (hashtable.containsKey(target - nums[i])) {
+                return new int[]{hashtable.get(target - nums[i]), i};
+            }
+            hashtable.put(nums[i], i);
+        }
+        return new int[0];
+    }
+}
+```
+
+Python Code:
+
+```py
+class Solution:
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
+        hashtable = dict()
+        for i, num in enumerate(nums):
+            if target - num in hashtable:
+                return [hashtable[target - num], i]
+            hashtable[nums[i]] = i
+        return []
 ```
 
 **复杂度分析**
