仅遍历一次的Java辅助栈方法
Code by Java

--- a/problems/20.valid-parentheses.md
+++ b/problems/20.valid-parentheses.md
@@ -155,28 +155,23 @@ Java Code:
 ```java
 class Solution {
     public boolean isValid(String s) {
-        int n = s.length();
-        if (n % 2 == 1) {
-            return false;
-        }
-
-        Map<Character, Character> pairs = new HashMap<Character, Character>() {{
-            put(')', '(');
-            put(']', '[');
-            put('}', '{');
-        }};
-        Deque<Character> stack = new LinkedList<Character>();
-        for (int i = 0; i < n; i++) {
-            char ch = s.charAt(i);
-            if (pairs.containsKey(ch)) {
-                if (stack.isEmpty() || stack.peek() != pairs.get(ch)) {
-                    return false;
-                }
-                stack.pop();
-            } else {
-                stack.push(ch);
+        //1.判断空字符串
+        if(s.isEmpty()) return true;
+        //2.创建辅助栈
+        Stack<Character> stack = new Stack<>();
+        //3.仅遍历一次
+        for(char c : s.toCharArray()){
+            if(c == '('){
+                stack.push(')');
+            }else if(c == '['){
+                stack.push(']');
+            }else if(c == '{'){
+                stack.push('}');
+            }else if(stack.isEmpty() || c != stack.pop()){
+                return false;
             }
         }
+        //4.返回
         return stack.isEmpty();
     }
 }
