删除排序数组中的重复项——增加Java版本双指针解法
Code by Java

--- a/problems/26.remove-duplicates-from-sorted-array.md
+++ b/problems/26.remove-duplicates-from-sorted-array.md
@@ -88,7 +88,7 @@ for (int i = 0; i < len; i++) {
 
 ## 代码
 
-- 语言支持：JS，Python，C++
+- 语言支持：JS，Python，C++，Java
 
 Javascript Code:
 
@@ -147,6 +147,24 @@ public:
         return slow+1;
     }
 };
+```
+
+Java Code:
+
+```java
+ public int removeDuplicates(int[] nums) {
+    if(nums == null || nums.length == 0) return 0;
+    int p = 0;
+    int q = 1;
+    while(q < nums.length){
+        if(nums[p] != nums[q]){
+            nums[p + 1] = nums[q];
+            p++;
+        }
+        q++;
+    }
+    return p + 1;
+}
 ```
 
 **复杂度分析**
