买卖股票的最佳时机II -增加Python贪心策略Solution
Code by Python

--- a/problems/122.best-time-to-buy-and-sell-stock-ii.md
+++ b/problems/122.best-time-to-buy-and-sell-stock-ii.md
@@ -70,7 +70,7 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/description/
 
 ## 代码
 
-语言支持：JS，C++，Java
+语言支持：JS，C++，Java，Python
 
 JS Code:
 
@@ -127,6 +127,18 @@ class Solution {
         return res;
     }
 }
+```
+
+Python Code:
+
+```py
+class Solution:
+    def maxProfit(self, prices: List[int]) -> int:
+        profit = 0
+        for i in range(1, len(prices)):
+            tmp = prices[i] - prices[i - 1]
+            if tmp > 0: profit += tmp
+        return profit
 ```
 
 **复杂度分析**
