验证回文串——增加Java版本Solution
Code by Java

--- a/problems/125.valid-palindrome.md
+++ b/problems/125.valid-palindrome.md
@@ -61,7 +61,7 @@ https://leetcode-cn.com/problems/valid-palindrome/description/
 
 ## 代码
 
-- 语言支持：JS，C++，Python
+- 语言支持：JS，C++，Python，Java
 
 JavaScript Code:
 
@@ -158,6 +158,33 @@ class Solution:
         """
         s = ''.join(i for i in s if i.isalnum()).lower()
         return s == s[::-1]
+```
+
+Java Code:
+
+```java
+class Solution {
+    public boolean isPalindrome(String s) {
+        int n = s.length();
+        int left = 0, right = n - 1;
+        while (left < right) {
+            while (left < right && !Character.isLetterOrDigit(s.charAt(left))) {
+                ++left;
+            }
+            while (left < right && !Character.isLetterOrDigit(s.charAt(right))) {
+                --right;
+            }
+            if (left < right) {
+                if (Character.toLowerCase(s.charAt(left)) != Character.toLowerCase(s.charAt(right))) {
+                    return false;
+                }
+                ++left;
+                --right;
+            }
+        }
+        return true;
+    }
+}
 ```
 
 **复杂度分析**
