多数元素——Java版投票算法
Code by Java

--- a/problems/169.majority-element.md
+++ b/problems/169.majority-element.md
@@ -54,7 +54,7 @@ https://leetcode-cn.com/problems/majority-element/
 
 ## 代码
 
-- 语言支持：JS，Python, CPP
+- 语言支持：JS，Python, CPP,Java
 
 Javascript Code:
 
@@ -110,6 +110,26 @@ public:
         return ans;
     }
 };
+```
+
+Java Code:
+
+```java
+class Solution {
+    public int majorityElement(int[] nums) {
+        int count = 0;
+        Integer candidate = null;
+
+        for (int num : nums) {
+            if (count == 0) {
+                candidate = num;
+            }
+            count += (num == candidate) ? 1 : -1;
+        }
+
+        return candidate;
+    }
+}
 ```
 
 **复杂度分析**
