颠倒二进制位——增加java版log(n)解法
Code by Java

--- a/problems/190.reverse-bits.md
+++ b/problems/190.reverse-bits.md
@@ -75,7 +75,7 @@ eg :
 
 ## 代码
 
-- 语言支持：JS，C++，Python
+- 语言支持：JS，C++，Python，Java
 
 JavaScript Code：
 
@@ -130,6 +130,21 @@ class Solution:
         for i in range(31, -1, -1):
             ans |= ((n >> i) & 1) << (31 - i)
         return ans
+```
+
+Java Code：
+
+```java
+public class Solution {
+    public int reverseBits(int n) {
+        int rev = 0;
+        for (int i = 0; i < 32 && n != 0; ++i) {
+            rev |= (n & 1) << (31 - i);
+            n >>>= 1;
+        }
+        return rev;
+    }
+}
 ```
 
 **复杂度分析**
