打家劫舍——增加Java版动态规划优化空间O(1)解法
Code by Java

--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -102,7 +102,7 @@ return b;
 
 ## 代码
 
-- 语言支持：JS，C++，Python
+- 语言支持：JS，C++，Python，Java
 
 JavaScript Code：
 
@@ -165,6 +165,29 @@ class Solution:
             for i in range(2, length):
                 cur, prev = max(prev + nums[i], cur), cur
             return cur
+```
+
+Java Code:
+
+```java
+class Solution {
+    public int rob(int[] nums) {
+        if (nums == null || nums.length == 0) {
+            return 0;
+        }
+        int length = nums.length;
+        if (length == 1) {
+            return nums[0];
+        }
+        int first = nums[0], second = Math.max(nums[0], nums[1]);
+        for (int i = 2; i < length; i++) {
+            int temp = second;
+            second = Math.max(first + nums[i], second);
+            first = temp;
+        }
+        return second;
+    }
+}
 ```
 
 **复杂度分析**
