移除链表元素——增加迭代解法
Code by C++，Java

--- a/problems/203.remove-linked-list-elements.md
+++ b/problems/203.remove-linked-list-elements.md
@@ -58,7 +58,7 @@ if (!next || next.val !== val) {
 
 ## 代码
 
-- 语言支持：JS，Python
+- 语言支持：JS，Python，C++，Java
 
 Javascript Code:
 
@@ -110,6 +110,46 @@ class Solution:
             else:
                 cur = cur.next
         return prev.next
+```
+
+C++ Code:
+
+```cpp
+class Solution {
+public:
+    ListNode* removeElements(ListNode* head, int val) {
+        struct ListNode* dummyHead = new ListNode(0, head);
+        struct ListNode* temp = dummyHead;
+        while (temp->next != NULL) {
+            if (temp->next->val == val) {
+                temp->next = temp->next->next;
+            } else {
+                temp = temp->next;
+            }
+        }
+        return dummyHead->next;
+    }
+};
+```
+
+Java Code:
+
+```java
+class Solution {
+    public ListNode removeElements(ListNode head, int val) {
+        ListNode dummyHead = new ListNode(0);
+        dummyHead.next = head;
+        ListNode temp = dummyHead;
+        while (temp.next != null) {
+            if (temp.next.val == val) {
+                temp.next = temp.next.next;
+            } else {
+                temp = temp.next;
+            }
+        }
+        return dummyHead.next;
+    }
+}
 ```
 
 **复杂度分析**
