--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -179,13 +179,13 @@ class Solution {
         if (length == 1) {
             return nums[0];
         }
-        int first = nums[0], second = Math.max(nums[0], nums[1]);
+        int prev = nums[0], cur = Math.max(nums[0], nums[1]);
         for (int i = 2; i < length; i++) {
-            int temp = second;
-            second = Math.max(first + nums[i], second);
-            first = temp;
+            int temp = cur;
+            cur = Math.max(prev + nums[i], cur);
+            prev = temp;
         }
-        return second;
+        return cur;
     }
 }
 ```
