--- a/problems/191.number-of-1-bits.md
+++ b/problems/191.number-of-1-bits.md
@@ -131,14 +131,13 @@ Java Code:
 ```java
 public class Solution {
     public int hammingWeight(int n) {
-    //空间复杂度实际为O(1)
-        int ret = 0;
+        int count = 0;
         for (int i = 0; i < 32; i++) {
             if ((n & (1 << i)) != 0) {
-                ret++;
+                count++;
             }
         }
-        return ret;
+        return count;
     }
 }
 ```
